# DifferenceEngine

./: .gitignore  CFileApprise.cpp  CFileApprise.hpp  CFileTask.cpp  CFileTask.hpp  CLogger.cpp  CLogger.hpp  CMailSend.cpp  CMailSend.hpp  CMakeLists.txt  CRedirect.cpp  CRedirect.hpp  FPE.cpp  FPE.hpp  FPECPP.cpp  FPETask.cpp  FPETask.hpp  FPE_ActionFuncs.cpp  FPE_ActionFuncs.hpp  FPE_Actions.cpp  FPE_Actions.hpp  FPE_HOST.hpp  FPE_ProcCmdLine.cpp  FPE_ProcCmdLine.hpp  FPE_Task.cpp  FPE_Task.hpp  FPE_TaskAction.cpp  FPE_TaskAction.hpp  FPE_TaskActions.cpp  HOST.hpp  IApprise.cpp  IApprise.hpp  LICENSE.txt  Redirect.cpp  Redirect.hpp  readme.md
Actions/: CopyFile.cpp  EmailFile.cpp  ImportCSVFile.cpp  RunCommand.cpp  VideoConversion.cpp  ZipFile.cpp
classes/: CFileApprise.cpp  CFileApprise.hpp  CFileMIME.cpp  CFileMIME.hpp  CFileTask.cpp  CFileTask.hpp  CFileZIP.cpp  CFileZIP.hpp  CLogger.cpp  CLogger.hpp  CMailIMAP.cpp  CMailIMAP.hpp  CMailIMAPBodyStruct.cpp  CMailIMAPBodyStruct.hpp  CMailIMAPParse.cpp  CMailIMAPParse.hpp  CMailSMTP.cpp  CMailSMTP.hpp  CMailSend.cpp  CMailSend.hpp  CRedirect.cpp  CRedirect.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
tests/: ActionFuncsTests.cpp  CFileAppriseTests.cpp  CFileTaskClassTests.cpp  ProcCmdLineTest.cpp  ProcCmdLineTests.cpp  TaskClassTests.cpp
